--- a/.github/workflows/ncdmv-reservation-workflow.yaml
+++ b/.github/workflows/ncdmv-reservation-workflow.yaml
@@ -2,8 +2,12 @@ name: NCDMV Reservation Check
 on:
   workflow_dispatch:
   schedule:
-    # every hour
-    - cron: "0 * * * *"
+    - cron: '0,30 2 * * *'   # 10:00 PM and 10:30 PM Charlotte time
+    - cron: '0,30 3 * * *'   # 11:00 PM and 11:30 PM
+    - cron: '0,15,30,45 4 * * *'   # 12:00 AM and 12:30 AM
+    - cron: '0,30 5 * * *'   # 1:00 AM and 1:30 AM
+      # every hour
+#    - cron: "0 * * * *"
 jobs:
   send-mail:
     runs-on: ubuntu-latest
